# testApp

./: .replit  app.py  getDBResult.py  getJobData.py  getProfileData.py  plotProfileMaps.py  pyMongoConnect.py  pyproject.toml  replit.nix
static/: footer.html  header.html  homescript.js  styles.css
templates/: checkHome.html  home.html  hometest.html  jobListPage.html  mapsInfo.html  newhome.html  test.html
