[tool.poetry]
name = "repl_nix_testApp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
pymongo = "^4.3.3"
numpy = "^1.24.3"
pandas = "^2.0.2"
folium = "^0.14.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
